Fix overflowing title

--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -38,6 +38,8 @@ body {
     height: 100%;
     overflow-x: hidden;
 
+    padding: 2rem 0;
+
     text-rendering: optimizeSpeed;
 
     line-height: 1.5;
