--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -120,7 +120,9 @@
 }
 
 .ending-bg {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
 
     width: 100vw;
     height: 100%;
